--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
     <section class="twice-section">
         <div class="container">
             <div class="row tw-sec-border-bott">
-                <div class="col-md-2">
+                <div class="col-md-2 media_768_ileft">
                         <a href="#"><i class="fas fa-angle-left"></i></a>
                  </div>
                 <div class="col-md-8">
                     <a href=""><p>"Lorem Ipsum dolor sit amet, consectetur adipiscing. Nunc non diam<br>
                         erat. In fringilla massa ut nisi ullamcorper pellentesque"</p></a>
                 </div>
-                <div class="col-md-2 tw-sec-arrow-right">
+                <div class="col-md-2 tw-sec-arrow-right media_768_iright">
                         <a href="#"><i class="fas fa-angle-right"></i></a>
                 </div>
             </div>
@@ -104,7 +104,7 @@
     <section class="thrice-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 width-sec">
                     <h4><strong class="thr-sec-color">Metuvestas mu lacinia</strong></h4>
                     <div class="thr-sec-shadow-img">
                         <img class="thrice-section-img" src="./images/1.png" width="290px" height="180px">
@@ -115,7 +115,7 @@
                     <br>
                     <a href="#" class="thr-sec-a"><strong class="thr-sec-color-1">Continue Reading <i class="fas fa-angle-right"> </i></strong></p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 width-sec">
                         <h4><strong class="thr-sec-color">Metuvestas mu lacinia</strong></h4>
                     <div class="thr-sec-shadow-img">
                         <img class="thrice-section-img" src="./images/2.png" width="290px" height="180px">
@@ -126,7 +126,7 @@
                     <br>
                     <a href="#" class="thr-sec-a"><strong class="thr-sec-color-1">Continue Reading <i class="fas fa-angle-right"> </i></strong></a>
                 </div>
-                <div class="col-md--4">
+                <div class="col-md--4 media_768_div">
                         <h4><strong class="thr-sec-color">Metuvestas mu lacinia</strong></h4>
                         <div class="thr-sec-little-div">
                              <img class="thr-sec-little-img" src="./images/3.jpg" width="48px" height="48px;">
@@ -159,7 +159,7 @@
     <footer class="first-footer">
         <div class="container first-footer-1">
             <div class="row">
-                <div class="col-md-2">
+                <div class="col-md-2 footer-xs-size-2">
                     <h3>Two Quarter</h3>
                     <div class="first-footer-img-padding">
                         <img  src="./images/5.jpg" height="95px" width="95px">
@@ -168,7 +168,7 @@
                     <img src="./images/6.jpg" height="95px" width="95px">
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 media_768_foot_1">
                     <div class="fr-foot-padding-top">
                             <h4><strong class="fr-foot-strong">Metuervestas mus lacinia</strong></h4>
                         <p>Convallisijusto vestas mus pellentum aeseansa pibu<br>
@@ -182,7 +182,7 @@
                              at fring maurisusce at elis ut vitae laorem<br></p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 media_768_foot_2">
                     <h3>One Quarter</h3>
                     <div class="mini-div">
                     <p>@namehere Justoid nonummy<br>
@@ -197,9 +197,9 @@
                              1 day ago </p>
                      </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 foot_xs_last">
                     <h3>One Quarter</h3>
-                    <ul class="mini-ul-padding1">
+                    <ul class="mini-ul-padding1 ">
                         <li><img src="./images/7.jpg" height="65px" width="65px"></li>
                         <li><img src="./images/14.jpg" height="65px" width="65px"></li>
                         <li><img src="./images/15.jpg" height="65px" width="65px"></li>
@@ -209,7 +209,7 @@
                             <li><img src="./images/9.jpg" height="65px" width="65px"></li>
                             <li><img src="./images/10.jpg" height="65px" width="65px"></li>
                     </ul>
-                    <ul class="mini-ul-padding">
+                    <ul class="mini-ul-padding media_768_foot_3">
                             <li><img src="./images/11.jpg" height="65px" width="65px"></li>
                             <li><img src="./images/12.jpg" height="65px" width="65px"></li>
                             <li><img src="./images/13.jpg" height="65px" width="65px"></li>
@@ -221,11 +221,11 @@
 <!-- twice footer -->
     <footer class="twice-footer">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
+            <div class="row footer-xs-size">
+                <div class="col-md-6 ">
                     <p>Copyright &copy;2018 - All Rights Reserved - behlul@valiyev.az</p>
                 </div>
-                <div class="col-md-offset-3 col-md-3">
+                <div class="col-md-offset-3 col-md-3 tw-foot">
                     <p>Template by BValiyev</p>
                 </div>
             </div>
